--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fotomat</title>
     <link rel="stylesheet" href="style.css" type="text/css"/>
+    <script src="fotomat.js"></script> 
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
@@ -19,7 +21,9 @@
       <h1 class="fot">Fotomatic</h1> 
         <nav>
          <ul>
-            <li class="about"><a id="join" href="about">Join</a></li>
+          
+          <li class="about"><a id="join" href="about">Join</a></li>
+          
             <li><a href="follow">Follow<img id="instagram-symbol" src="fotomat images/instagram.png"></a></li>
           </ul>
         </nav>
@@ -31,7 +35,7 @@
             <p id="Ins">Instant</p>
             <p id="fc">Format Camera</p>
           </div>
-            <p id="email">Email us to request a demo and be in our waiting list for Febuary 2025 release!</p>
+            <p id="email">Email us to request a demo and be in our waiting list for the Febuary 2025 release!</p>
             <div class="button"><a class="ab" href="join">Join the waiting list</a></div>
         </div>
     </div>
