--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fotomat</title>
     <link rel="stylesheet" href="style.css" type="text/css"/>
-    <script src="fotomat.js"></script> 
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
@@ -21,10 +19,8 @@
       <h1 class="fot">Fotomatic</h1> 
         <nav>
          <ul>
-          
           <li class="about"><a id="join" href="about">Join</a></li>
-          
-            <li><a href="follow">Follow<img id="instagram-symbol" src="fotomat images/instagram.png"></a></li>
+          <li><a href="follow">Follow<img id="instagram-symbol" src="fotomat images/instagram.png"></a></li>
           </ul>
         </nav>
       </div>
@@ -72,4 +68,5 @@
      <p id="nyc">Designed in NYC</p>
     </footer>
 </body>
+<script src="script.js"></script> 
 </html>
