--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
       <h1 class="fot">Fotomatic</h1> 
         <nav>
          <ul>
-          <li class="about"><a id="join" href="about">Join</a></li>
+         <li class="about" ><a id="join" href="about">Join</a></li>
+          <div class="pop-up" id="popup"><p>Click join to get on the waiting list.</p></div>
           <li><a href="follow">Follow<img id="instagram-symbol" src="fotomat images/instagram.png"></a></li>
           </ul>
         </nav>
+
       </div>
     </header> 
     <div class="background-photo">
@@ -32,7 +34,7 @@
             <p id="fc">Format Camera</p>
           </div>
             <p id="email">Email us to request a demo and be in our waiting list for the Febuary 2025 release!</p>
-            <div class="button"><a class="ab" href="join">Join the waiting list</a></div>
+            <div class="button" id="butt"><a class="ab" href="join">Join the waiting list</a></div>
         </div>
     </div>
     <div class="contain-2boxes">
@@ -67,6 +69,6 @@
      <p id="rights">2016 Fotomatic, All Rights Reserved</p>
      <p id="nyc">Designed in NYC</p>
     </footer>
+    <script src="script.js"></script> 
 </body>
-<script src="script.js"></script> 
 </html>
