scaled photos and mouseover popup

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          <li><a href="follow">Follow<img id="instagram-symbol" src="fotomat images/instagram.png"></a></li>
           </ul>
         </nav>
-        <div class="pop-up" id="popup"><p>Click join to get on the waiting list.</p></div>
+        <div class="pop-up" id="popup"><p class="waiting">Click join to get on the waiting list.</p></div>
       </div>
     </header> 
     <div class="background-photo">
