added html form page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1 class="fot">Fotomatic</h1> 
         <nav>
          <ul>
-         <li class="about" ><a id="join" href="about">Join</a></li>
+         <li class="about" ><a id="join" href="index2.html">Join</a></li>
          <li><a href="follow">Follow<img id="instagram-symbol" src="fotomat images/instagram.png"></a></li>
           </ul>
         </nav>
@@ -33,7 +33,7 @@
             <p id="fc">Format Camera</p>
           </div>
             <p id="email">Email us to request a demo and be in our waiting list for the Febuary 2025 release!</p>
-            <div class="button" id="butt"><a class="ab" href="join">Join the waiting list</a></div>
+            <div class="button" id="button"><a class="ab" href="join">Join the waiting list</a></div>
         </div>
     </div>
     <div class="contain-2boxes">
