linked big join button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p id="fc">Format Camera</p>
           </div>
             <p id="email">Email us to request a demo and be in our waiting list for the Febuary 2025 release!</p>
-            <div class="button" id="button"><a class="ab" href="join">Join the waiting list</a></div>
+            <div class="button" id="button"><a class="ab" href="index2.html">Join the waiting list</a></div>
         </div>
     </div>
     <div class="contain-2boxes">
