--- a/index2.html
+++ b/index2.html
@@ -38,7 +38,7 @@
             </div>
             <div class="form-coltwo">
                 <input type="tel" id="phone" name="phone"placeholder="Phone"><br><br>
-                <input type="email" id="email" name="email"placeholder="Email">
+                <input type="email" id="eemail" name="email"placeholder="Email">
                 <textarea id="message" name="message" rows="5" cols="30"placeholder="Message"></textarea><br><br>
                 <input type="submit" value="Submit">
             </div>
