changed fonts and Scaled button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="pop-up" id="popup"><p class="waiting">Click join to get on the waiting list.</p></div>
       </div>
     </header> 
-    <div class="background-photo">
+    <div class="background-photo" alt="background-photo">
         <div class="text-box">
           <div class="opacity">
             <p id="Ins">Instant</p>
@@ -38,12 +38,12 @@
     </div>
     <div class="contain-2boxes">
       <div class="image-box">
-        <img src="fotomat images/feature-1.png">
+        <img src="fotomat images/feature-1.png" alt="feature-1">
         <h2 id="advert">Advanced, automatic, instant</h2>
         <p id="discribe">Shutter speed, apperture and flash output adjust automatically.</p>
       </div>
       <div class="image-box">
-        <img src="fotomat images/feature-2.png">
+        <img src="fotomat images/feature-2.png" alt="feature-2">
         <h2 id="advert">Beautifully crafted inside-out</h2>
         <p id="discribe">From the paint outside to the tiny screw inside, Fotomat is crafted with love and 20 years of expertise.</p>
       </div>
@@ -52,10 +52,10 @@
         <h2 id="filters">Over +20 filters to choose from</h2>
         <p id="creativity">Feed your creativity with 20 different filters designed by our eclectic in-house photographers!</p>
       <div class="photos">
-        <img src="fotomat images/filter-1.png">
-        <img src="fotomat images/filter-2.png">
-        <img src="fotomat images/filter-3.png">
-        <img src="fotomat images/filter-4.png">
+        <img src="fotomat images/filter-1.png" alt="filter-1">
+        <img src="fotomat images/filter-2.png" alt="filter-2">
+        <img src="fotomat images/filter-3.png" alt="filter-3">
+        <img src="fotomat images/filter-4.png" alt="filter-4">
       </div>
     </div>
     
