--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
       <h1 class="fot">Fotomatic</h1> 
         <nav>
          <ul>
-         <li class="about" ><a id="join" href="index.html">Home</a></li>
+         <li class="home" ><a id="home" href="index.html">Main</a></li>
          <li><a href="follow">Follow<img id="instagram-symbol" src="fotomat images/instagram.png"></a></li>
         </ul>
         </nav>
@@ -27,7 +27,8 @@
     </header>
     <div class="background-photo">
         <div class="form-box">
-            <p class="form-words">Give us your info. We will contact you when the Fotomatic is available</p>
+            <p class="form-words"><strong></strong></p>
+            <p class="form-words"><strong>Give us your info.</strong></p>
             <form class="form" action="index.html" method="post">
             <div class="form-colone">
                  <input type="text" id="name" name="name" placeholder="name"><br><br>
