added footer to index2

--- a/index2.html
+++ b/index2.html
@@ -46,5 +46,9 @@
               </form>
         </div>
     </div>    
+    <footer>
+        <p id="rights">2016 Fotomatic, All Rights Reserved</p>
+        <p id="nyc">Designed in NYC</p>
+       </footer>
     </body>
     </html>
