added grid and styling to form page

--- a/index2.html
+++ b/index2.html
@@ -25,10 +25,10 @@
         </nav>
        </div>
     </header>
-    <div class="background-photo">
+    
         <div class="form-box">
-            <p class="form-words"><strong></strong></p>
-            <p class="form-words"><strong>Give us your info.</strong></p>
+            <div class="col-one">
+                <p class="form-words"><strong>Waiting list entry form</strong></p>
             <form class="form" action="index.html" method="post">
             <div class="form-colone">
                  <input type="text" id="name" name="name" placeholder="name"><br><br>
@@ -44,8 +44,12 @@
                 <input type="submit" value="Submit">
             </div>
               </form>
+            </div>
+            <div class="col-two">
+                <img src = 'fotomat images/feature-2.png' alt="fotomatic">
+            </div>
         </div>
-    </div>    
+       
     <footer>
         <p id="rights">2016 Fotomatic, All Rights Reserved</p>
         <p id="nyc">Designed in NYC</p>
